[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/weapons/Misile.gd" type="Script" id=1]
[ext_resource path="res://assets/weapons/misile.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 0.5 )

[sub_resource type="CircleShape2D" id=5]
radius = 84.5946

[node name="Misile" type="Node2D"]
script = ExtResource( 1 )

[node name="MisileArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MisileArea"]
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="DetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2( -1.5, 0 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3, -1.5 )
texture = ExtResource( 2 )
centered = false

[node name="TrailPosition" type="Position2D" parent="."]
position = Vector2( -3, 0 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="DropPosition" type="Position2D" parent="."]
position = Vector2( 7, 0 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="AccelarationTween" type="Tween" parent="."]

[connection signal="body_entered" from="MisileArea" to="." method="_on_MisileArea_body_entered"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
